[project]
name = "leetcode-daily"
version = "0.1.0"
description = "Your default Leetcode repo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
target-version = "py312"
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = [
  "A",
  "Q",
  "COM",
  "C4",
  "B006",
  "T20",
  "ARG",
  "RET",
  "SLF",
  "S",
  "SIM",
  "BLE",
  "PLR0911",
  "PLR0913",
  "PLR0915",
  "C901",
]
extend-ignore = ["S101", "S311", "T201", "RET503", "COM812"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.uv]
dev-dependencies = [
    "ipython>=9.6.0",
]

